# quantum-noise-lab

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  interview_questions.md  mini_research_question.md  ml_fidelity_report.md
experiments/: run_ghz_decay_extension.py  run_mitigation_sweep.py  run_ml_fidelity.py  run_noise_sweep.py
experiments/configs/: ghz_decay_extension.toml  mitigation.toml  ml_fidelity.toml  noise_sweep.toml
experiments/results/: ghz_decay_extension.csv  mitigation_sweep.csv  ml_fidelity_feature_importance.csv  ml_fidelity_metrics.csv  noise_sweep.csv
notebooks/: 01_qiskit_fundamentals.ipynb  02_noise_models.ipynb  03_noise_experiments.ipynb  04_error_mitigation.ipynb  05_mini_research_question.ipynb  06_ml_fidelity_prediction.ipynb
src/: circuits.py  error_mitigation.py  experiment_utils.py  ml_fidelity.py  noise_models.py  research_analysis.py  simulation.py  visualization.py
tests/: test_circuits.py  test_error_mitigation.py  test_experiment_utils.py  test_ml_fidelity.py  test_noise_models.py  test_research_analysis.py
