[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-noise-lab"
version = "0.1.0"
description = "Practical quantum noise simulation and mitigation lab built with Qiskit."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["src*"]
