[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-noise-lab"
version = "0.1.0"
description = "Practical quantum noise simulation and mitigation lab built with Qiskit."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
markers = [
    "slow: end-to-end tests that shell out to a script or run a larger simulation",
]
